[BUGFIX] Align table header in backend user/group comparison
Previously, the content of the table header in the backend user/group
comparison view was misaligned, the title was moved below the action
buttons.

This commit changes the alignment to have the title and the action
buttons next to each other. Additionally, the items are vertically
centered.

Resolves: #104691
Related: #104635
Releases: main
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/85720
Tested-by: Andreas Kienast <a.fernandez@scripting-base.de>
Tested-by: Benjamin Franzke <ben@bnf.dev>
Tested-by: Benjamin Kott <benjamin.kott@outlook.com>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -4053,9 +4053,8 @@ td.permission-column-group{padding-inline-start:0;width:200px;white-space:nowrap
 .beuser-comparison__table td,.beuser-comparison__table th{-moz-column-width:auto;column-width:auto}
 }
 .beuser-comparison__table th[scope=row]{white-space:wrap}
-.beuser-comparison-element{display:flex;flex-direction:column;align-content:space-between}
-.beuser-comparison-element__title{white-space:wrap;word-break:break-all}
-.beuser-comparison-element__action{padding-bottom:var(--typo3-component-padding-y);text-align:right}
+.beuser-comparison-element{display:flex;align-items:flex-start;gap:var(--typo3-spacing)}
+.beuser-comparison-element__title{flex-grow:1;white-space:wrap;word-break:break-word;padding-top:calc(var(--typo3-input-border-width) + var(--typo3-input-sm-padding-y))}
 .extensionmanager-is-loading{opacity:0!important}
 .extensionmanager-is-hidden{display:none!important}
 .extensionmanager-is-shown{display:block!important}
